Add Algolia, site tiles, info.

--- a/_config.yml
+++ b/_config.yml
@@ -14,27 +14,28 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 lang: en-US
-title: My Awesome Site
-email:
-description:
+title: Sam's Notebook
+email: samwhite@uw.edu
+description: University of Washington - Fishery Sciences - Roberts Lab
 baseurl: # the optional subpath of your site, e.g. "/blog"
-url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url: https://robertslab.github.io/sams-notebook/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 author:
   name:
   twitter:
   picture:
-twitter_username:
-github_username:
+twitter_username: kubu4
+github_username: kubu4
 logo: # path of site logo, e.g. "/assets/images/logo.png"
-search: # true, false (default)
-search_full_content: false # true, false (default)
-search_provider: # lunr (default), algolia
+search: true # true, false (default)
+search_full_content: true # true, false (default)
+search_provider: algolia # lunr (default), algolia
 algolia:
-  application_id: # YOUR_APPLICATION_ID
-  index_name: # YOUR_INDEX_NAME
-  search_only_api_key: # YOUR_SEARCH_ONLY_API_KEY
+  application_id: ENNN0LGCFC # YOUR_APPLICATION_ID
+  index_name: sams_notebook # YOUR_INDEX_NAME
+  search_only_api_key: bad5bfcfef4a347363413e602cedd540 # YOUR_SEARCH_ONLY_API_KEY
   powered_by: # true (default), false
-
+  disqus:
+    shortname: kubu4
 # Build settings
 markdown: kramdown
 theme: jekyll-theme-basically-basic
