--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,8 @@ plugins: # previsously gems
 feed:
   path: atom.xml
 
+google_analytics: UA-59101502-3
+
 # Pagination - https://jekyllrb.com/docs/pagination/
 paginate: 10
 paginate_path: /page:num/
