--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -35,8 +35,8 @@ google_fonts:
 # pages that have a `title`. Add raw page paths in the order you'd like.
 
 navigation_pages:
-  - posts.md
-  - about.md
+  - posts_by_month.md
+  - posts_by_year.md
+  - projects.md
   - tags.md
-  - categories.md
-  - dates.md
+  - about.md
