--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,7 @@ feed:
   path: atom.xml
 remote_theme: "mmistakes/jekyll-theme-basically-basic"
 google_analytics: UA-59101502-3
+permalink: /:year/:month/:day/:title:output_ext # Format post URLs
 
 # Pagination - https://jekyllrb.com/docs/pagination/
 paginate: 10
