--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ github_username: kubu4
 logo:  # path of site logo, e.g. "/assets/images/logo.png"
 search: true # true, false (default)
 search_full_content: true # true, false (default)
-search_provider: algolia # lunr (default), algolia
+search_provider: lunr # lunr (default), algolia
 algolia:
   application_id: ENNN0LGCFC # YOUR_APPLICATION_ID
   index_name: sams_notebook # YOUR_INDEX_NAME
