--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,10 @@ before_install:
   - gem install bundler
 script:
   - bundle exec jekyll algolia
+  - bundle exec jekyll build
 branches:
   only:
     # Change this to gh-pages if you're deploying using the gh-pages branch
     - master
 rvm:
  - 2.4
-
-language: ruby
-rvm:
-- 2.1
-script: "bundle exec jekyll build"
