add --trace argument to build command

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - gem install bundler
 script:
   - bundle exec jekyll algolia
-  - bundle exec jekyll build
+  - bundle exec jekyll build  -trace
 branches:
   only:
     # Change this to gh-pages if you're deploying using the gh-pages branch
