rm trailing slash in URL:

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ title: Sam's Notebook
 email: samwhite@uw.edu
 description: University of Washington - Fishery Sciences - Roberts Lab
 baseurl: /sams-notebook # the optional subpath of your site, e.g. "/blog"
-url: https://robertslab.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url: https://robertslab.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 author:
   name: Sam White
   twitter: kubu4
