add highlighter option for code highlighting in page renders

--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,9 @@ disqus:
   shortname: kubu4
 # Build settings
 markdown: kramdown
+
+# Set code block highlighting
+highlighter: rouge
 plugins: # previsously gems
   - jekyll-feed
   - jekyll-seo-tag
