change personal info

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ url: https://marine-predators-group.github.io # the base hostname & protocol for
 author:
   name: Camrin Braun
   twitter: braunianmotion
-  %picture: /images/profile.jpeg
+  picture: /images/profile.jpeg
 github_username: camrinbraun
 logo:  # path of site logo, e.g. "/assets/images/logo.png"
 search: true # true, false (default)
